--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "opendash-widget-highcharts-live",
   "version": "1.0.0",
   "author": "Nico Castelli <nico.castelli@uni-siegen.de>",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "private": true,
   "main": "src/index.js",
   "jsnext:main": "src/index.js",
